--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <nav class="navbar navbar-dark bg-primary">
+  <!--<nav class="navbar navbar-dark bg-primary">
     <div class="nav navbar-nav">
       <a routerLink="/" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
         <i class="fa fa-home"></i> Home
@@ -24,7 +24,7 @@
         <i class="fa fa-sign-out"></i> Logout
       </a>
     </div>
-  </nav>
+  </nav>-->
 
   <router-outlet></router-outlet>
 
