--- a/client/app/dashboard-question/dashboard-question.component.html
+++ b/client/app/dashboard-question/dashboard-question.component.html
@@ -50,8 +50,9 @@
        <div class="ui-g-12"><p-radioButton name="group1" value="Others" label="Others" formControlName="groupname"></p-radioButton></div>
   </div>
 
+<!--*ngIf="groupname._status == 'VALID' "-->
 
-    <div *ngIf="groupname._status == 'VALID' "  class="form_div">
+    <div  class="form_div">
       <div class="input-group" [ngClass]="setClassEmail()">
         <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
         <input class="form-control" type="email" name="email" formControlName="email" placeholder="Email" autofocus>
